# meetingmind

./: .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  index.html  meeting-mind.db  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  meeting-mind.db  tauri.conf.json
src-tauri/.sqlx/: query-11cc6861512e35f6f0966a5dc70647d8acd33bca062c9d051ee4da1ee4924ff5.json  query-28b0072394959951ddbc931df32d6fcc020575eea36b40d1702047389d4f24e3.json  query-297ff565097447242a7a3eb2b23aa970667066e5042e0147f2cffb54124877d8.json  query-2c581739090f0bb1caff0d30a5010a048ea30f7cc8248d012eb6306b90690522.json  query-48deb3b89fd7d23058c6fbcd958e50963053228fa50b373d4607046d9fd697df.json  query-5ad2fc523020efbdeb38c7175c3ce43b65f801f5bf80f3ebd353abf8a247cc00.json  query-7de7f161decb37f8c15559603249c3544ef615831953fa2fd74743306c01ff6d.json  query-7ee7faaf2e0c2ea0b0523c3fe112bc4d3fea5bd8ca97ed341c517bacefdfb34f.json  query-82ca0c64530f51c5f1121b941866fe07f5ded4566737ac22f41f69b89f7a0dd5.json  query-90943d134e03fec715e27fca33953a590b84aeb1b71bde2404a8977a4e911a27.json  query-a3114dd5d4a30af4257dfbe9c125a89a68c44aa78e2064dda293d3709579e4b0.json  query-ab87b1098e4319e45b760a3b141a876c873073b49962c8bd567fe10febf1cb07.json  query-ac8661a228324d885a57e9c1dd521a3bb7f5c564ea99e8603547f4f04f5e7829.json  query-b2852f2df78b32d61c7379bd4aef853461492908725c3182f78033a5f5aff84b.json  query-cb01524caf7437d6d5a953e8d5bc8eab34e3cd2c1cc4072f76404bbc6b016036.json  query-cd7b34b399e3ee4e6467a6f8c4cab6748be6f3283d6eacdc035ddce10b601533.json  query-d6bbcda7e09d8994d5c0377fe6e6e25485fb0809932bcf2a5b72a15e3e447c3b.json  query-e275aee152bdda6110be4e9b165acca1df378c347775f4505d5765759dfc74b0.json  query-edb95a42cbe03859d3fd92438d7fcf2ed6fce938fcc63247ce9adf6b143d3a88.json  query-f0df7fa225a65b480d9e6c7de37f7b5a10d7839749339850b1b65ab47810f682.json  query-f6cb184c3801ff5e248f562a4e4ff43390974120ab0d223a1a9a95b591a332a9.json  query-f972748dad67b0413230f048e240069df91cab4ece30be8c0e87d0620334574b.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: claude.rs  client.rs  cost_tracking.rs  manager.rs  mod.rs  openai.rs  summarization.rs  templates.rs  tests.rs  types.rs
src-tauri/src/audio/: buffer.rs  capture.rs  devices.rs  mod.rs  processing.rs  tests.rs  types.rs
src-tauri/src/commands/: ai.rs  app.rs  audio.rs  calendar.rs  meetings.rs  mod.rs  search.rs  tests.rs  transcription.rs
src-tauri/src/config/: tests.rs
src-tauri/src/events/: calendar.rs  mod.rs  transcription.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/meeting/: mod.rs
(+269 files in other folders)
